# OpenSoul

./: ._README.md  ._scripts  .dockerignore  .env.example  .gitignore  DOCKER_FIXES_SUMMARY.txt  Dockerfile  LICENSE  NOTICE  README.en.md  README.md  docker-compose.yml  pyproject.toml  setup_output.txt  summarize_error.txt  summarize_error2.txt  summarize_help.txt  sync-skills.ps1  sync-skills.sh  test_startup.py  tmp_logs.txt
.claude/: launch.json  settings.local.json
docs/: architecture.md  easy_intro.md  easy_intro_backup.txt
docs/diagrams/: 01_components.puml  02_chat_sequence.puml  03_dream_sequence.puml  04_memory_schema.puml  05_neurochemstate.puml
local_skills/: dream  memory  memory-search  notes  notes-list  soul  status
local_skills/soul-clear-db/: SKILL.md
local_skills/soul-dream/: SKILL.md
local_skills/soul-edit/: SKILL.md
local_skills/soul-memory-search/: SKILL.md
openclaw/: .env.example  Dockerfile  docker-compose.yml  docker-setup.sh  install-skills.sh
scripts/: build_dxt.py  check_dim.py  daily_soul_compress.py  dev_start.py  edit_soul_skill.py  fix_browser_skill.py  fix_encoding.py  force_reset_db.py  migrate_semantic_v2.py  reinit_db.py  setup_env.py  setup_mcp.py  soul_note_api.py  soul_note_skill.py  test_gmail_schema.py
soul/: SOUL_MARKDOWN_GUIDE.md  SOUL_NOTE_README.md  soul_note_web.html  soul_notes_export.md
soul_mcp/: __init__.py  manifest.json  server.py
tests/: test_affect.py  test_agent.py  test_gating.py  test_mcp_tools.py  test_memory.py  test_semantic.py
workspace/: AGENTS.md  AGENT_CANARY.txt  MEMORY.md  SOUL.md
(+60 files in other folders)
